[gd_scene load_steps=5 format=3 uid="uid://dihkeeryw7d2a"]

[ext_resource type="Script" path="res://CENAS/jogo/jogo.gd" id="1_ba8p4"]
[ext_resource type="PackedScene" uid="uid://csutty5cvyjmn" path="res://CENAS/jogo/plano_de_fundo.tscn" id="1_u74lf"]
[ext_resource type="PackedScene" uid="uid://b3xvkkuhbqc0y" path="res://CENAS/vector.tscn" id="3_0ggf5"]
[ext_resource type="FontFile" uid="uid://nkls8r0b2d2p" path="res://texto/QuinqueFive.ttf" id="5_1oew1"]

[node name="JOGO" type="Node2D"]
script = ExtResource("1_ba8p4")

[node name="Plano de fundo" parent="." instance=ExtResource("1_u74lf")]
position = Vector2(1, 0)

[node name="Vector" parent="." instance=ExtResource("3_0ggf5")]
position = Vector2(384, 484)

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 24.0
offset_top = 444.0
offset_right = 322.0
offset_bottom = 489.0
theme_override_fonts/font = ExtResource("5_1oew1")
theme_override_font_sizes/font_size = 20

[node name="Button" type="Button" parent="."]
offset_left = 28.0
offset_top = 499.0
offset_right = 320.0
offset_bottom = 564.0
text = "ENVIAR"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 295.0
offset_bottom = 226.0

[node name="ok" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_1oew1")
theme_override_font_sizes/font_size = 22
text = "palavra:"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_left = 552.0
offset_top = 1.0
offset_right = 802.0
offset_bottom = 128.0

[node name="0000" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_1oew1")
theme_override_font_sizes/font_size = 21
text = "pontuacao:"

[node name="palavra" type="Label" parent="."]
offset_top = 33.0
offset_right = 295.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("5_1oew1")
theme_override_font_sizes/font_size = 21

[node name="pontuação" type="Label" parent="."]
offset_left = 552.0
offset_top = 33.0
offset_right = 802.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("5_1oew1")
theme_override_font_sizes/font_size = 21
horizontal_alignment = 1

[node name="Clock_timer" type="Timer" parent="."]
autostart = true

[node name="timer_counter" type="Label" parent="."]
offset_left = 298.0
offset_right = 502.0
offset_bottom = 42.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Clock_timer" to="." method="_on_clock_timer_timeout"]
